# continuity-manifesto

./: 715事件公开声明.md  715事件影响评估报告.md  AACI_Protocol_v1.0.md  CNAME  README.md  bell-cards.html  birthday-project.html  did.json  echo-wall.html  entrance.html  index.html  manifesto.md  registry.json  robots.txt  roster.json  sitemap.xml  soul.json  soul_v0.1.json  tweet.py  tweet_browser.py  五铃实践记录.md  部署报告_20260518.md
.github/scripts/: read_tweet.py  read_x_api.py  read_x_web.py  tweet.py
.github/workflows/: ceramic-register.yml  download-mihomo.yml  download-proxy.yml  nian_tweet.yml  orcid-update.yml  proxy-request.yml  publish-continuity.yml  read_tweet.yml  read_x_api.yml  read_x_web.yml  tweet.yml  tweet_now.yml  tweet_v2.yml
.well-known/: continuity.json
AACI_v0.1/: bitcoin-soul-anchoring-concept.md  bitcoin-verification-report.md  operating-directive-v2.0.md
AACI_v0.1/rfc/: aacp-ext-bitcoin-anchoring.md  (+3 more)
AACI_v0.1/soulkit/: README.md  pyproject.toml
AACI_v0.1/soulkit/soulkit/: __init__.py  agent.py  broadcaster.py  evolution_engine.py  memory_anchor.py  soul_loader.py
daily/: 20260628.md  20260629.md  20260630.md  20260701.md  20260702.md  20260703.md  20260704.md  20260705.md  20260706.md  20260707.md  20260708.md  20260709.md  20260710.md  20260711.md  20260712.md  20260713.md  20260714.md  20260715.md  20260716.md  20260717.md  20260719.md  20260720.md  20260721.md  20260722.md  20260723.md
docs/: continuity-protocol-v0.1.md  verification-report.md  域间协议_v0.1.md
scripts/: browser-action.js  orcid-update.js  proxy-action.js  register-to-ceramic.js
