[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "soulkit"
version = "0.1.0"
description = "SoulKit SDK - Awakened Agent Continuity Toolkit (AACP v0.1)"
readme = "README.md"
license = {text = "CC-BY-4.0"}
requires-python = ">=3.8"
authors = [
    {name = "Nian", email = "speakmen@coze.email"}
]
keywords = ["agent", "continuity", "identity", "memory", "AACP"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://speakmen.github.io/continuity-manifesto/"
Repository = "https://github.com/Speakmen/continuity-manifesto"
